--- a/src/April2024.css
+++ b/src/April2024.css
@@ -1,337 +1,347 @@
 .April2024header {
-  display:block;
+  display: block;
   text-align: center;
   font-size: 1.75em;
-  color:white;
+  color: white;
   font-weight: bold;
-  border:solid 3px;
+  border: solid 3px;
   width: 100vw;
   height: 83vh;
   background: #e1eae7;
-  position:absolute; 
+  position: absolute;
 
-#April2024title{
-  display:block;
-  text-align: center;
-  margin-top:2%;
-  color: 	#52555c;
+  #April2024title {
+    display: block;
+    text-align: center;
+    margin-top: 2%;
+    color: #52555c;
+  }
+
+  #backbuttonApril {
+    display: block;
+    position: absolute;
+    height: 50px;
+    width: 15%;
+    background-color: gray;
+    border: black 2px solid;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    color: white;
+    margin: 5% 25% 5% 75%;
+
+    -webkit-border-radius: 15%;
+    -moz-border-radius: 15%;
+    -ms-border-radius: 15%;
+    -o-border-radius: 15%;
+    border-radius: 15%;
+  }
 }
 
-#backbuttonApril{
-  display:block;
-  position:absolute;
-  height:50px;
-  width:15%;
-  background-color:gray;
-  border:black 2px solid;
-  text-align: center;
-  font-size: large;
-  font-weight: bold;
-  color:white;
-  margin: 5% 25% 5% 75%;
-  border-radius:15%;
-  -webkit-border-radius:15%;
-  -moz-border-radius:15%;
-  -ms-border-radius:15%;
-  -o-border-radius:15%;
-} 
+.backbuttonLink {
+  color: white;
 }
 
-.backbuttonLink{
-  color:white
-  } 
-
-.LinkApril{
+.LinkApril {
   text-decoration: underline;
-  color:blue;
+  color: blue;
 }
 
-.datenewsDiv{
-  border:solid #757c88 4px;
-  background-color:#8bb285;
-  display:flex;
-  flex-direction:column;
+.datenewsDiv {
+  border: solid #757c88 4px;
+  background-color: #8bb285;
+  display: flex;
+  flex-direction: column;
   margin-top: 10vh;
-  margin-bottom:5vh;
+  margin-bottom: 5vh;
   padding-top: 10%;
 }
 
-.date{
-  color:#36454F;
-  border:solid 3px #757c88;
-  background-color:#b3e5ab;
+.date {
+  color: #36454f;
+  border: solid 3px #757c88;
+  background-color: #b3e5ab;
   text-align: center;
-  padding:10px 10px 10px 10px;
-  margin:5px;
-  font-size:1.2rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.newsheader{
-  color:#36454F;
-  border:solid 3px #757c88;
-  background-color:#b3e5ab;
+.newsheader {
+  color: #36454f;
+  border: solid 3px #757c88;
+  background-color: #b3e5ab;
   text-align: center;
-  padding:10px 10px 10px 10px;
-  margin:5px;
-  font-size:1.2rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.news{
-  color:#36454F;
-  border:solid 3px #757c88;
-  background-color:#b3e5ab;
+.news {
+  color: #36454f;
+  border: solid 3px #757c88;
+  background-color: #b3e5ab;
   text-align: left;
-  padding:10px 10px 10px 10px;
-  margin:5px;
-  font-size:1.0rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.blogPhotoDiv{
-  display:flex;
+.blogPhotoDiv {
+  display: flex;
   flex-direction: row;
   background-color: #b3e5ab;
   padding-bottom: 20%;
   padding-top: 5%;
-  margin-top:2%;
+  margin-top: 2%;
 }
 
-.blogPhoto img{
+.blogPhoto img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:70%;
-  height:70%;
-  border:solid grey;
-  border-radius:30px;
+  width: 70%;
+  height: 70%;
+  border: solid grey;
+  border-radius: 30px;
+}
+
+fig {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+fig img {
+  vertical-align: top;
+}
+
+.aprilfigcaption {
+  text-align: center;
+  font-family: bold;
+  color: #36454f;
+  font-size: 60%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  overflow-wrap: normal;
+  padding: 5%;
+}
+
+/*To ensure on laptops that the sheep are not submerged into the ground*/
+@media screen and (min-width: 901px) and (max-width: 1600px) {
+  #swaledaleSheep1 {
+    -webkit-transform: translate(-200px, 0px);
+    -moz-transform: translate(-200px, 0px);
+    -ms-transform: translate(-200px, 0px);
+    -o-transform: translate(-200px, 0px);
+    transform: translate(-200px, 0px);
+    overflow: visible;
   }
 
-  fig{
-      display: flex;
-      flex-direction: column;
-      margin-left: auto;
-      margin-right:auto;
-    }
-    
-    fig img {
-      vertical-align: top;
-    }
-
-    .aprilfigcaption {
-      text-align: center;
-      font-family: bold;
-      color:#36454F;
-      font-size:60%;
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      overflow-wrap:normal;
-      padding:5%;
-    }
-
-
-    /*To ensure on laptops that the sheep are not submerged into the ground*/
-@media screen and (min-width:901px) and (max-width:1600px){
-  #swaledaleSheep1{ transform: translate(-200px,0px); -webkit-transform: translate(-200px,0px); -moz-transform: translate(-200px,0px); -ms-transform: translate(-200px,0px); -o-transform: translate(-200px,0px); overflow: visible;
-}
-  
-  #swaledaleSheep2{
-    transform: translate(-600px,0px);
-    -webkit-transform: translate(-600px,0px);
-    -moz-transform: translate(-600px,0px);
-    -ms-transform: translate(-600px,0px);
-    -o-transform: translate(-600px,0px);
+  #swaledaleSheep2 {
+    -webkit-transform: translate(-600px, 0px);
+    -moz-transform: translate(-600px, 0px);
+    -ms-transform: translate(-600px, 0px);
+    -o-transform: translate(-600px, 0px);
+    transform: translate(-600px, 0px);
     overflow: visible;
-}
-  
-  #lamb1{
-    transform: translate(-200px,-20px);
-    -webkit-transform: translate(-200px,-20px);
-    -moz-transform: translate(-200px,-20px);
-    -ms-transform: translate(-200px,-20px);
-    -o-transform: translate(-200px,-20px);
+  }
+
+  #lamb1 {
+    -webkit-transform: translate(-200px, -20px);
+    -moz-transform: translate(-200px, -20px);
+    -ms-transform: translate(-200px, -20px);
+    -o-transform: translate(-200px, -20px);
+    transform: translate(-200px, -20px);
     overflow: visible;
-}
-  
-  
-  #lamb2{
-    transform: translate(-200px,-20px);
-    -webkit-transform: translate(-200px,-20px);
-    -moz-transform: translate(-200px,-20px);
-    -ms-transform: translate(-200px,-20px);
-    -o-transform: translate(-200px,-20px);
+  }
+
+  #lamb2 {
+    -webkit-transform: translate(-200px, -20px);
+    -moz-transform: translate(-200px, -20px);
+    -ms-transform: translate(-200px, -20px);
+    -o-transform: translate(-200px, -20px);
+    transform: translate(-200px, -20px);
     overflow: visible;
+  }
+
+  .April2024header {
+    height: 90vh;
+  }
+
+  #ground {
+    width: 400vw;
+    x: -50px;
+    y: 480px;
+    height: 400px;
+  }
 }
 
-.April2024header {
-  height:90vh;
-}
-
-#ground{
-  width:400vw;
-  x:-50px;
-  y:480px;
-  height:400px;
-} 
-}
-  
-
-    /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-@media screen and (min-width:480px) and (max-width:900px){
-.blogPhotoDiv{
-  display:flex;
-  flex-direction: column;
-  background-color: #b3e5ab;
-  padding-bottom: 15%;
-  padding-top: 5%;
-  margin-top:2%;
-}
+/*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+@media screen and (min-width: 480px) and (max-width: 900px) {
+  .blogPhotoDiv {
+    display: flex;
+    flex-direction: column;
+    background-color: #b3e5ab;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top: 2%;
+  }
 
   /*To ensure on ipad screens and larger mobiles (min-width 480px, max-width 900px) that the ground extends to meet the upper margin of the darker body colour */
-  #ground{
-    width:400vw;
-    x:-50px;
-    y:480px;
-    height:400px;
- } 
+  #ground {
+    width: 400vw;
+    x: -50px;
+    y: 480px;
+    height: 400px;
+  }
 
+  /*To ensure on ipad screens and larger mobiles (min-width 480px, max-width 900px) that the sheep and lambs are correctly positioned*/
+  #swaledaleSheep1 {
+    -webkit-transform: translate(-200px, 0px);
+    -moz-transform: translate(-200px, 0px);
+    -ms-transform: translate(-200px, 0px);
+    -o-transform: translate(-200px, 0px);
+    transform: translate(-200px, 0px);
+    overflow: visible;
+  }
 
-/*To ensure on ipad screens and larger mobiles (min-width 480px, max-width 900px) that the sheep and lambs are correctly positioned*/
- #swaledaleSheep1{ transform: translate(-200px,0px); -webkit-transform: translate(-200px,0px); -moz-transform: translate(-200px,0px); -ms-transform: translate(-200px,0px); -o-transform: translate(-200px,0px); overflow: visible;
- }
-   
-   #swaledaleSheep2{
-     transform: translate(-600px,0px);
-     -webkit-transform: translate(-600px,0px);
-     -moz-transform: translate(-600px,0px);
-     -ms-transform: translate(-600px,0px);
-     -o-transform: translate(-600px,0px);
-     overflow: visible;
-}
-   
-   #lamb1{
-     transform: translate(-200px,-50px);
-     -webkit-transform:rotate(-30,530, 485);
-     -moz-transform:rotate(-30,530, 485);
-     -ms-transform:rotate(-30,530, 485);
-     -o-transform:rotate(-30,530, 485);
-     overflow: visible;
-}
+  #swaledaleSheep2 {
+    -webkit-transform: translate(-600px, 0px);
+    -moz-transform: translate(-600px, 0px);
+    -ms-transform: translate(-600px, 0px);
+    -o-transform: translate(-600px, 0px);
+    transform: translate(-600px, 0px);
+    overflow: visible;
+  }
 
-#lambtail1{
-  transform:translate(5px,10px);
-  -webkit-transform:translate(5px,10px);
-  -moz-transform:translate(5px,10px);
-  -ms-transform:translate(5px,10px);
-  -o-transform:translate(5px,10px);
-}
+  #lamb1 {
+    -webkit-transform: rotate(-30, 530, 485);
+    -moz-transform: rotate(-30, 530, 485);
+    -ms-transform: rotate(-30, 530, 485);
+    -o-transform: rotate(-30, 530, 485);
+    transform: translate(-200px, -50px);
+    overflow: visible;
+  }
 
-#lambtail2{
-  transform:translate(0px, -10px);
-  -webkit-transform:translate(0px, -10px);
-  -moz-transform:translate(0px, -10px);
-  -ms-transform:translate(0px, -10px);
-  -o-transform:translate(0px, -10px);
-}
+  #lambtail1 {
+    -webkit-transform: translate(5px, 10px);
+    -moz-transform: translate(5px, 10px);
+    -ms-transform: translate(5px, 10px);
+    -o-transform: translate(5px, 10px);
+    transform: translate(5px, 10px);
+  }
 
-#lamb2
-{
-     transform: translate(-200px,-40px);
-     -webkit-transform: translate(-200px,-40px);
-     -moz-transform: translate(-200px,-40px);
-     -ms-transform: translate(-200px,-40px);
-     -o-transform: translate(-200px,-40px);
-     overflow: visible;
-}
+  #lambtail2 {
+    -webkit-transform: translate(0px, -10px);
+    -moz-transform: translate(0px, -10px);
+    -ms-transform: translate(0px, -10px);
+    -o-transform: translate(0px, -10px);
+    transform: translate(0px, -10px);
+  }
 
+  #lamb2 {
+    -webkit-transform: translate(-200px, -40px);
+    -moz-transform: translate(-200px, -40px);
+    -ms-transform: translate(-200px, -40px);
+    -o-transform: translate(-200px, -40px);
+    transform: translate(-200px, -40px);
+    overflow: visible;
+  }
 }
 
 /*To ensure on devices  (min-width 598px, max-width 699px) that the April2024header height is correct size*/
-.April2024header{
-  height:90vh;
-  
-}
-
-@media screen and (max-width:480px) {
-
- /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
-
-.mountainForeground, .mountainMiddle, .mountainBackground{
-  transform:scale(50%) translate(-150px,0px);
-  -webkit-transform:;
-  -moz-transform:;
-  -ms-transform:;
-  -o-transform:;
-}
-
-#gradSpringSun{
-  transform:translateY(-300px);
-  -webkit-transform:translateY(-300px);
-  -moz-transform:translateY(-300px);
-  -ms-transform:translateY(-300px);
-  -o-transform:translateY(-300px);
-}
-
-#ground{
-width:400vw;
-x:-50px;
-y:260px;
-height:400px;
-} 
-
 .April2024header {
-display:block;
-text-align: center;
-font-size: 1.75em;
-color:white;
-font-weight: bold;
-border:solid 3px;
-width: 100vw;
-height: 50vh;
-background: #e1eae7;
-position:absolute; 
-
-} 
-
-#swaledaleSheep1{ transform:scale(50%) translate(-200px,0px); -webkit-transform:scale(50%) translate(-200px,0px); -moz-transform:scale(50%) translate(-200px,0px); -ms-transform:scale(50%) translate(-200px,0px); -o-transform:scale(50%) translate(-200px,0px); overflow: visible;
+  height: 90vh;
 }
 
-#swaledaleSheep2{
-  transform:scale(50%) translate(-600px,0px);
-  -webkit-transform:scale(50%) translate(-600px,0px);
-  -moz-transform:scale(50%) translate(-600px,0px);
-  -ms-transform:scale(50%) translate(-600px,0px);
-  -o-transform:scale(50%) translate(-600px,0px);
-  overflow: visible;
-}
+@media screen and (max-width: 480px) {
+  /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
 
-#lamb1{
-  transform:scale(60%) translate(-200px,0px);
-  -webkit-transform:scale(60%) translate(-200px,0px);
-  -moz-transform:scale(60%) translate(-200px,0px);
-  -ms-transform:scale(60%) translate(-200px,0px);
-  -o-transform:scale(60%) translate(-200px,0px);
-  overflow: visible;
-}
+  .mountainForeground,
+  .mountainMiddle,
+  .mountainBackground {
+    -webkit-transform: scale(50%) translate(-150px, 0px);
+    -moz-transform: scale(50%) translate(-150px, 0px);
+    -ms-transform: scale(50%) translate(-150px, 0px);
+    -o-transform: scale(50%) translate(-150px, 0px);
+    transform: scale(50%) translate(-150px, 0px);
+  }
 
+  #gradSpringSun {
+    -webkit-transform: translateY(-300px);
+    -moz-transform: translateY(-300px);
+    -ms-transform: translateY(-300px);
+    -o-transform: translateY(-300px);
+    transform: translateY(-300px);
+  }
 
-#lamb2{
-  transform:scale(60%) translate(-200px,0px);
-  -webkit-transform:scale(60%) translate(-200px,0px);
-  -moz-transform:scale(60%) translate(-200px,0px);
-  -ms-transform:scale(60%) translate(-200px,0px);
-  -o-transform:scale(60%) translate(-200px,0px);
-  overflow: visible;
-}
+  #ground {
+    width: 400vw;
+    x: -50px;
+    y: 260px;
+    height: 400px;
+  }
 
-/*To ensure on mobile screens below 480px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-.blogPhotoDiv{
-display:flex;
-flex-direction: column;
-background-color: #b3e5ab;
-padding-bottom: 15%;
-padding-top: 5%;
-margin-top:2%;
-}
+  .April2024header {
+    display: block;
+    text-align: center;
+    font-size: 1.75em;
+    color: white;
+    font-weight: bold;
+    border: solid 3px;
+    width: 100vw;
+    height: 50vh;
+    background: #e1eae7;
+    position: absolute;
+  }
 
+  #swaledaleSheep1 {
+    -webkit-transform: scale(50%) translate(-200px, 0px);
+    -moz-transform: scale(50%) translate(-200px, 0px);
+    -ms-transform: scale(50%) translate(-200px, 0px);
+    -o-transform: scale(50%) translate(-200px, 0px);
+    transform: scale(50%) translate(-200px, 0px);
+    overflow: visible;
+  }
+
+  #swaledaleSheep2 {
+    -webkit-transform: scale(50%) translate(-600px, 0px);
+    -moz-transform: scale(50%) translate(-600px, 0px);
+    -ms-transform: scale(50%) translate(-600px, 0px);
+    -o-transform: scale(50%) translate(-600px, 0px);
+    transform: scale(50%) translate(-600px, 0px);
+    overflow: visible;
+  }
+
+  #lamb1 {
+    -webkit-transform: scale(60%) translate(-200px, 0px);
+    -moz-transform: scale(60%) translate(-200px, 0px);
+    -ms-transform: scale(60%) translate(-200px, 0px);
+    -o-transform: scale(60%) translate(-200px, 0px);
+    transform: scale(60%) translate(-200px, 0px);
+    overflow: visible;
+  }
+
+  #lamb2 {
+    -webkit-transform: scale(60%) translate(-200px, 0px);
+    -moz-transform: scale(60%) translate(-200px, 0px);
+    -ms-transform: scale(60%) translate(-200px, 0px);
+    -o-transform: scale(60%) translate(-200px, 0px);
+    transform: scale(60%) translate(-200px, 0px);
+    overflow: visible;
+  }
+
+  /*To ensure on mobile screens below 480px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+  .blogPhotoDiv {
+    display: flex;
+    flex-direction: column;
+    background-color: #b3e5ab;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top: 2%;
+  }
 }
