--- a/src/CaminoDeSantiago.css
+++ b/src/CaminoDeSantiago.css
@@ -178,7 +178,8 @@
       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       display: block;
       color:black;
-      background-color: #f6f0a3;
+      background-color: #FFD700;
+      opacity:0.9;
       
     }
     
@@ -204,7 +205,8 @@
       display:flex;
       flex-direction: column;
       border:solid 3px navy;
-      background-color:#f6f0a3;
+      background-color:#FFD700;
+      opacity:0.9;
       padding-bottom: 2%;
       padding-top: 2%;    
       margin-right: auto;
