--- a/src/July2024.css
+++ b/src/July2024.css
@@ -1,208 +1,193 @@
 .July2024header {
-  display:block;
+  display: block;
   text-align: center;
   font-size: 1.75em;
-  color:white;
+  color: white;
   font-weight: bold;
   width: 100vw;
-  height:auto;
-  position:absolute;
-    } 
-
-  .LinkJuly2024 {
-    color:blueviolet;
-  }
-  
-  .headerPhotoJuly{
-      width:40%;
-      height:auto;
-      /* border:#E0DBD1 solid 5px; */
-      border: solid black 2px;
-      margin:auto;
-      border-radius: 25%;
-      -webkit-border-radius: 25%;
-      -moz-border-radius: 25%;
-      -ms-border-radius: 25%;
-      -o-border-radius: 25%;
-     
+  height: auto;
+  position: absolute;
 }
 
-#buttonJuly{
-  display:block;
-  position:absolute;
-  height:50px;
-  width:15%;
-  background-color:gray;
-  border:black 2px solid;
+.LinkJuly2024 {
+  color: blueviolet;
+}
+
+.headerPhotoJuly {
+  width: 40%;
+  height: auto;
+  /* border:#E0DBD1 solid 5px; */
+  border: solid black 2px;
+  margin: auto;
+  -webkit-border-radius: 25%;
+  -moz-border-radius: 25%;
+  -ms-border-radius: 25%;
+  -o-border-radius: 25%;
+  border-radius: 25%;
+}
+
+#buttonJuly {
+  display: block;
+  position: absolute;
+  height: 50px;
+  width: 15%;
+  background-color: gray;
+  border: black 2px solid;
   text-align: center;
   font-size: large;
   font-weight: bold;
-  color:white;
+  color: white;
   text-decoration: underline;
-  margin:5% 40% 5% 50%;
-  border-radius:15%;
-  -webkit-border-radius:15%;
-  -moz-border-radius:15%;
-  -ms-border-radius:15%;
-  -o-border-radius:15%;
-} 
-  
-  .backbuttonLink{
-      color:white
-      } 
-    
-    .datenewsDivJuly{
-      background-color:#6B7A8F;
-      display:flex;
-      flex-direction:column;
-      margin-top: 0vh;
-      margin-bottom:0vh;
-      padding-top: 10vh;
-      padding-bottom:5vh;
-      
-      
-  }
-    
-    .dateJuly{
-      color:#36454F;
-      background-color:#C291A4;
-      text-align: center;
-      margin-top:0%;
-      padding-top: 10px ;
-      padding-bottom:10px; 
-      font-size:1.2rem;
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-weight: bold;
-      border: solid 2px black;
-      
-    }
-    
-    .newsheaderJuly{
-      width:100%;
-      color:#36454F;
-      border:solid 2px black;
-      background-color:#C291A4;
-      text-align: center;
-      padding-top:10px;
-      padding-bottom: 10px;
-      margin-top:5px;
-      margin-bottom:5px;
-      margin-right:0px;
-      font-size:1.2rem;
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-weight:bold;
-    }
-    
-    .newsJuly{
-      color:#36454F;
-      border:solid 2px black;
-      background-color:#C291A4;
-      text-align: left;
-      padding:20px 20px 20px 20px;
-      margin-top:1%;
-      margin-bottom: 0vh;
-      font-size:1.0rem;
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-weight:bold;
-    }
-  
-    .blogPhotoDivJuly{
-      display:flex;
-      flex-direction: row;
-      background-color: #745762;
-      padding-bottom: 8%;
-      padding-top: 5%;
-      margin-top:5vh;
-    }
-    
-    .blogPhotoJuly img{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width:70%;
-      height:70%;
-      border:solid black 2px;
-      border-radius:10%;
-      -webkit-border-radius:10%;
-      -moz-border-radius:10%;
-      -ms-border-radius:10%;
-      -o-border-radius:10%;
+  margin: 5% 40% 5% 50%;
+  -webkit-border-radius: 15%;
+  -moz-border-radius: 15%;
+  -ms-border-radius: 15%;
+  -o-border-radius: 15%;
+  border-radius: 15%;
 }
-  
-  figjuly{
-    display: flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right:auto;
-  }
-  
-  figjuly img {
-    vertical-align: top;
-  }
-  
-  .julyfigcaption {
-    text-align: center;
-    font-family: bold;
-    color:white;
-    font-size: 1.0rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    overflow-wrap:normal;
-    padding-top:5%;
-  }
-  
-  .slideshowentryJuly {
-    display: block;
-    background-color: #C291A4;
-    margin-left: auto;
-    margin-right: auto;
-    pointer-events:none;
-    width:25%;
-    height:auto;
-    border-radius:100%;
-    margin-top:3%;
-    margin-bottom:5%;
-    -webkit-border-radius:100%;
-    -moz-border-radius:100%;
-    -ms-border-radius:100%;
-    -o-border-radius:100%;
-  }      
-  
-  .slideshowinstructionsJuly {
-    margin-top:5%;
-    margin-bottom:2%;
-    font-size:1.0rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display:inline-block;
-    color:white; 
-  }
-  
-  .slideshowHostPhotoJuly{
-    display:flex;
-    flex-direction: column;
-    background-color: #745762;
-    padding-bottom: 5%;
-    padding-top: 5%;
-    margin-top:5vh;
-    justify-content:center;
-    text-align:center;
-  }
 
-  .slideshowHostPhotoJuly img{
-    width:70%;
-    height:auto;
-    border:solid black 2px;
-  }
+.backbuttonLink {
+  color: white;
+}
 
-  /*css to run rain and cloud animation*/
-  
+.datenewsDivJuly {
+  background-color: #6b7a8f;
+  display: flex;
+  flex-direction: column;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  padding-top: 10vh;
+  padding-bottom: 5vh;
+}
+
+.dateJuly {
+  color: #36454f;
+  background-color: #c291a4;
+  text-align: center;
+  margin-top: 0%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  border: solid 2px black;
+}
+
+.newsheaderJuly {
+  width: 100%;
+  color: #36454f;
+  border: solid 2px black;
+  background-color: #c291a4;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 0px;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+}
+
+.newsJuly {
+  color: #36454f;
+  border: solid 2px black;
+  background-color: #c291a4;
+  text-align: left;
+  padding: 20px 20px 20px 20px;
+  margin-top: 1%;
+  margin-bottom: 0vh;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+}
+
+.blogPhotoDivJuly {
+  display: flex;
+  flex-direction: row;
+  background-color: #745762;
+  padding-bottom: 8%;
+  padding-top: 5%;
+  margin-top: 5vh;
+}
+
+.blogPhotoJuly img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  height: 70%;
+  border: solid black 2px;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  -o-border-radius: 10%;
+  border-radius: 10%;
+}
+
+.julyfigcaption {
+  text-align: center;
+  font-family: bold;
+  color: white;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  overflow-wrap: normal;
+  padding-top: 5%;
+}
+
+.slideshowentryJuly {
+  display: block;
+  background-color: #c291a4;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events: none;
+  width: 25%;
+  height: auto;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+}
+
+.slideshowinstructionsJuly {
+  margin-top: 5%;
+  margin-bottom: 2%;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: inline-block;
+  color: white;
+}
+
+.slideshowHostPhotoJuly {
+  display: flex;
+  flex-direction: column;
+  background-color: #745762;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  margin-top: 5vh;
+  justify-content: center;
+  text-align: center;
+}
+
+.slideshowHostPhotoJuly img {
+  width: 70%;
+  height: auto;
+  border: solid black 2px;
+}
+
+/*css to run rain and cloud animation*/
+
 .main {
-  display:flex;
+  display: flex;
   flex-direction: column;
   width: 50vw;
   height: auto;
   margin-bottom: 10%;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   /* overflow: hidden; */
 }
@@ -223,11 +208,11 @@ ul li {
   border-radius: 50%;
   position: relative;
   top: -30px;
-  -webkit-filter: blur(6px);
+  filter: blur(6px);
   z-index: 11;
   left: -50px;
   opacity: 0.76;
-  zoom: 0.5;
+  zoom: 0.4;
 }
 
 .cloud:before {
@@ -236,7 +221,7 @@ ul li {
   background: white;
   width: 100px;
   height: 100px;
-  -webkit-filter: blur(3px);
+  filter: blur(3px);
   position: relative;
   border-radius: 50%;
   top: -30px;
@@ -249,7 +234,7 @@ ul li {
   background: white;
   width: 200px;
   height: 100px;
-  -webkit-filter: blur(3px);
+  filter: blur(3px);
   position: relative;
   border-radius: 50%;
   top: -80px;
@@ -274,23 +259,21 @@ ul li {
   left: 230px;
 }
 
-
-
 @keyframes cloudAnimation {
   0% {
     transform: translate(-500px, 0);
   }
   100% {
-    transform: translate(1000px, 0);
     -webkit-transform: translate(1000px, 0);
     -moz-transform: translate(1000px, 0);
     -ms-transform: translate(1000px, 0);
     -o-transform: translate(1000px, 0);
-}
+    transform: translate(1000px, 0);
+  }
 }
 .allcloud {
-  animation: 11000ms cloudAnimation linear infinite;
   -webkit-animation: 11000ms cloudAnimation linear infinite;
+  animation: 11000ms cloudAnimation linear infinite;
 }
 .dropWater {
   position: absolute;
@@ -443,182 +426,174 @@ ul li {
   animation: drop 2.2s linear 0.42s infinite;
 }
 .rain {
-    position: absolute;
-    top: -260px;
-    height:680px;
-    animation: full 0.2s 2s;
+  position: absolute;
+  top: -260px;
+  height: 680px;
+  animation: full 0.2s 2s;
 }
 @keyframes full {
   0% {
-      opacity: 0;  
+    opacity: 0;
   }
   100% {
-  opacity: 1;   
+    opacity: 1;
   }
 }
 
 /*@media queries*/
-@media screen and (min-width:2000px) {
-    
-  /*To ensure on screensabove 2000 width that relevant components of 
+@media screen and (min-width: 2000px) {
+  /*To ensure on screens above 2000 width that relevant components of 
   the site are displayed with the best dimensions for the larger devices*/
- .headerPhotoJuly{
-   width:15%;
-   height:auto;
-   margin:auto;
-   border:#E0DBD1 solid 5px;
-   border-radius: 25%;
-   -webkit-border-radius: 25%;
-   -moz-border-radius: 25%;
-   -ms-border-radius: 25%;
-   -o-border-radius: 25%;
-  
-}
+  .headerPhotoJuly {
+    width: 15%;
+    height: auto;
+    margin: auto;
+    border: #e0dbd1 solid 5px;
+    -webkit-border-radius: 25%;
+    -moz-border-radius: 25%;
+    -ms-border-radius: 25%;
+    -o-border-radius: 25%;
+    border-radius: 25%;
+  }
 
-.slideshowentryJuly {
-display: block;
-background-color: #C291A4;
-margin-left: auto;
-margin-right: auto;
-pointer-events:none;
-width:10%;
-height:auto;
-border-radius:100%;
-margin-top:3%;
-margin-bottom:5%;
--webkit-border-radius:100%;
--moz-border-radius:100%;
--ms-border-radius:100%;
--o-border-radius:100%;
-}      
+  .slideshowentryJuly {
+    display: block;
+    background-color: #c291a4;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 10%;
+    height: auto;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    border-radius: 100%;
+  }
 }
 
 /*To ensure on ipad screens and smaller that header photo will enlarge*/
-@media screen and (max-width:901px){
-  .headerPhotoJuly{
-   width:70%;
-   height:auto;
-   margin:auto;
-   border:#E0DBD1 solid 5px;
-   border-radius: 25%;
-   -webkit-border-radius: 25%;
-   -moz-border-radius: 25%;
-   -ms-border-radius: 25%;
-   -o-border-radius: 25%;
-  
+@media screen and (max-width: 901px) {
+  .headerPhotoJuly {
+    width: 70%;
+    height: auto;
+    margin: auto;
+    border: #e0dbd1 solid 5px;
+    -webkit-border-radius: 25%;
+    -moz-border-radius: 25%;
+    -ms-border-radius: 25%;
+    -o-border-radius: 25%;
+    border-radius: 25%;
+  }
 }
+
+/*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+@media screen and (min-width: 480px) and (max-width: 900px) {
+  .blogPhotoDivJuly {
+    display: flex;
+    flex-direction: column;
+    background-color: #c291a4;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top: 2%;
   }
 
-     /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-    @media screen and (min-width:480px) and (max-width:900px){
-    .blogPhotoDivJuly{
-      display:flex;
-      flex-direction: column;
-      background-color:  #C291A4;
-      padding-bottom: 15%;
-      padding-top: 5%;
-      margin-top:2%;
-    }
-
-    .main {
-      display:flex;
-      flex-direction: column;
-      width: 50vw;
-      height: auto;
-      margin-bottom: 30%;
-      margin-left:auto;
-      margin-right:auto;
-      position: relative;
-      /* overflow: hidden; */
-    }
-    }
-    
-    @media screen and (max-width:601px) {
-      body #buttonJuly{
-        display:block;
-        position:relative;
-        height:auto;
-        width:30%;
-        background-color:gray;
-        border:black 2px solid;
-        text-align:center;
-        font-size: large;
-        font-weight: bold;
-        padding:2%;
-        color:white;
-        margin-top: 15%;
-        margin-left:20%;
-        margin-right:25%;
-        border-radius:15%;
-        -webkit-border-radius:15%;
-        -moz-border-radius:15%;
-        -ms-border-radius:15%;
-        -o-border-radius:15%;
-      }  
-
-    
-    }
-
-    /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
-    the site are displayed with the best dimensions for the smaller devices*/
-  @media screen and (max-width:480px) {
-   .July2024header {
-   display:block;
-   width: 100vw;
-   height:auto;
-   position:absolute; 
-   } 
-
-   .headerPhotoJuly{
-     width:100%;
-     height:auto;
-     border:#E0DBD1 solid 5px;
-     margin:auto;
-     border-radius: 25%;      
-     -webkit-border-radius: 25%;
-     -moz-border-radius: 25%;
-     -ms-border-radius: 25%;
-     -o-border-radius: 25%;
-    }
-   
-   .blogPhotoDivJuly{
-   display:flex;
-   flex-direction: column;
-   background-color:  #C291A4;
-   padding-bottom: 15%;
-   padding-top: 5%;
-   margin-top:2%;
-   }
-
-   .slideshowentryJuly {
-     display: block;
-     background-color: #C291A4;
-     margin-left: auto;
-     margin-right: auto;
-     pointer-events:none;
-     width:60%;
-     height:auto;
-     border-radius:100%;
-     margin-top:3%;
-     margin-bottom:5%;
-     -webkit-border-radius:100%;
-     -moz-border-radius:100%;
-     -ms-border-radius:100%;
-     -o-border-radius:100%;
-   } 
-   
-   .main {
-    display:flex;
+  .main {
+    display: flex;
     flex-direction: column;
     width: 50vw;
     height: auto;
     margin-bottom: 30%;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     /* overflow: hidden; */
   }
-   }
+}
 
+@media screen and (max-width: 601px) {
+  body #buttonJuly {
+    display: block;
+    position: relative;
+    height: auto;
+    width: 30%;
+    background-color: gray;
+    border: black 2px solid;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    padding: 2%;
+    color: white;
+    margin-top: 15%;
+    margin-left: 20%;
+    margin-right: 25%;
+    -webkit-border-radius: 15%;
+    -moz-border-radius: 15%;
+    -ms-border-radius: 15%;
+    -o-border-radius: 15%;
+    border-radius: 15%;
+  }
+}
 
-   
+/*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+    the site are displayed with the best dimensions for the smaller devices*/
+@media screen and (max-width: 480px) {
+  .July2024header {
+    display: block;
+    width: 100vw;
+    height: auto;
+    position: absolute;
+  }
+
+  .headerPhotoJuly {
+    width: 100%;
+    height: auto;
+    border: #e0dbd1 solid 5px;
+    margin: auto;
+    -webkit-border-radius: 25%;
+    -moz-border-radius: 25%;
+    -ms-border-radius: 25%;
+    -o-border-radius: 25%;
+    border-radius: 25%;
+  }
+
+  .blogPhotoDivJuly {
+    display: flex;
+    flex-direction: column;
+    background-color: #c291a4;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top: 2%;
+  }
+
+  .slideshowentryJuly {
+    display: block;
+    background-color: #c291a4;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 60%;
+    height: auto;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    border-radius: 100%;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: auto;
+    margin-bottom: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    /* overflow: hidden; */
+  }
+}
