--- a/src/May2024.css
+++ b/src/May2024.css
@@ -1,378 +1,357 @@
-
 .May2024header {
-  display:block;
+  display: block;
   text-align: center;
   font-size: 1.75em;
-  color:white;
+  color: white;
   font-weight: bold;
   /*border:solid 3px;
-  */width: 100vw;
+  */
+  width: 100vw;
   height: auto;
   background: #e1eae7;
-  position:absolute;
+  position: absolute;
 
   .May2024Title {
- color: white;
+    color: white;
+  }
+
+  .linkMay2024 {
+    text-decoration: underline;
+    color: yellow;
+  }
+
+  #backbuttonMay {
+    display: block;
+    position: absolute;
+    height: 50px;
+    width: 15%;
+    background-color: gray;
+    border: black 2px solid;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    color: white;
+    margin: 5% 25% 5% 75%;
+    -webkit-border-radius: 15%;
+    -moz-border-radius: 15%;
+    -ms-border-radius: 15%;
+    -o-border-radius: 15%;
+    border-radius: 15%;
+  }
 }
 
-.linkMay2024{
-  text-decoration: underline;
-  color: yellow;
-}
-
-#backbuttonMay{
-  display:block;
-  position:absolute;
-  height:50px;
-  width:15%;
-  background-color:gray;
-  border:black 2px solid;
-  text-align: center;
-  font-size: large;
-  font-weight: bold;
-  color:white;
-  margin: 5% 25% 5% 75%;
-  border-radius:15%;
-  -webkit-border-radius:15%;
-  -moz-border-radius:15%;
-  -ms-border-radius:15%;
-  -o-border-radius:15%;
-} 
-}
-
-#Layer_1{
-  transform:scale(0.6);
-  -webkit-transform:scale(0.6);
-  -moz-transform:scale(0.6);
-  -ms-transform:scale(0.6);
-  -o-transform:scale(0.6);
+#Layer_1 {
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  -ms-transform: scale(0.6);
+  -o-transform: scale(0.6);
+  transform: scale(0.6);
   border: gray solid 10px;
 }
 
-.backbuttonLink{
-  color:white
-  } 
-
-.datenewsDivMay2024{
-  display:flex;
-  flex-direction:column;
-  border:solid #757c88 4px;
-  background-color:#8bb285;
-  display:flex;
-  flex-direction:column;
-  margin-top: 10vh;
-  margin-bottom:5vh;
+.backbuttonLink {
+  color: white;
 }
 
-.date{
-  color:#36454F;
-  border:solid 3px #757c88;
-  background-color:#b3e5ab;
+.datenewsDivMay2024 {
+  display: flex;
+  flex-direction: column;
+  border: solid #757c88 4px;
+  background-color: #8bb285;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+}
+
+.date {
+  color: #36454f;
+  border: solid 3px #757c88;
+  background-color: #b3e5ab;
   text-align: center;
-  padding:10px 10px 10px 10px;
-  margin:5px;
-  font-size:1.2rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
-.newsheader{
-  color:#36454F;
-  border:solid 3px #757c88;
-  background-color:#b3e5ab;
+.newsheader {
+  color: #36454f;
+  border: solid 3px #757c88;
+  background-color: #b3e5ab;
   text-align: center;
-  padding:10px 10px 10px 10px;
-  margin:5px;
-  font-size:1.2rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight:bold;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
 }
 
-.news{
-  color:#36454F;
-  border:solid 3px #757c88;
-  background-color:#b3e5ab;
+.news {
+  color: #36454f;
+  border: solid 3px #757c88;
+  background-color: #b3e5ab;
   text-align: left;
-  padding:10px 10px 10px 10px;
-  margin:5px;
-  font-size:1.0rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight:bold;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
 }
 
-#JillLindisfarne1993img{
+#JillLindisfarne1993img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   /* pointer-events:none;  */
-  width:35%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
+  width: 35%;
+  height: auto;
+  border: solid grey 2px;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  border-radius: 50%;
 }
 
-.blogPhotoDiv{
-  display:flex;
+.blogPhotoDiv {
+  display: flex;
   flex-direction: row;
   background-color: #b3e5ab;
   padding-bottom: 20%;
   padding-top: 5%;
-  margin-top:2%;
+  margin-top: 2%;
 }
 
-.blogPhoto img{
+.blogPhoto img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:70%;
-  height:70%;
-  border:solid grey;
-  border-radius:30px;
-  }
+  width: 70%;
+  height: 70%;
+  border: solid grey;
+  border-radius: 30px;
+}
 
-  figmay{
-      display: flex;
-      flex-direction: column;
-      margin-left: auto;
-      margin-right:auto;
-    }
-    
-    figmay img {
-      vertical-align: top;
-    }
+.mayfigcaption {
+  text-align: center;
+  font-family: bold;
+  color: #36454f;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  overflow-wrap: normal;
+  padding-top: 5%;
+}
 
-    .mayfigcaption {
-      text-align: center;
-      font-family: bold;
-      color:#36454F;
-      font-size: 1.0rem;
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      overflow-wrap:normal;
-      padding-top:5%;
-    }
-
-  .slideshowentryMay {
+.slideshowentryMay {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  pointer-events:none; 
-  width:25%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-}      
+  pointer-events: none;
+  width: 25%;
+  height: auto;
+  border: solid grey 2px;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  border-radius: 50%;
+}
 
 .slideshowentry1May {
-display: block;
-margin-left: auto;
-margin-right: auto;
-pointer-events:none; 
-width:15%;
-height:auto;
-border:solid grey 2px;
-border-radius:50%;
-margin-top:3%;
-margin-bottom:5%;
--webkit-border-radius:40px;
--moz-border-radius:40px;
--ms-border-radius:40px;
--o-border-radius:40px;
-}      
-
-.slideshowinstructions {
-  margin-top:5%;
-  margin-bottom:2%;
-  margin-right:2%;
-  margin-left:2%;
-  font-size:1.0rem;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  display:inline-block;
-  color:#36454F; 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events: none;
+  width: 15%;
+  height: auto;
+  border: solid grey 2px;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  border-radius: 50%;
 }
 
-.SlideshowHostPhoto{
-  display:flex;
+.slideshowinstructions {
+  margin-top: 5%;
+  margin-bottom: 2%;
+  margin-right: 2%;
+  margin-left: 2%;
+  font-size: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: inline-block;
+  color: #36454f;
+}
+
+.SlideshowHostPhoto {
+  display: flex;
   flex-direction: column;
   background-color: #b3e5ab;
   padding-bottom: 5%;
   padding-top: 5%;
-  margin-top:2%;
-  justify-content:center;
-  text-align:center;
+  margin-top: 2%;
+  justify-content: center;
+  text-align: center;
 }
 
-    /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-@media screen and (min-width:481px) and (max-width:900px){
-  .datenewsDivMay2024{
-    display:flex;
-    flex-direction:column;
-    border:solid #757c88 4px;
-    background-color:#8bb285;
-    display:flex;
-    flex-direction:column;
+/*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+@media screen and (min-width: 481px) and (max-width: 900px) {
+  .datenewsDivMay2024 {
+    display: flex;
+    flex-direction: column;
+    border: solid #757c88 4px;
+    background-color: #8bb285;
+    display: flex;
+    flex-direction: column;
     margin-top: 10vh;
-    margin-bottom:5vh;
+    margin-bottom: 5vh;
   }
 
-.blogPhotoDiv{
-  display:flex;
-  flex-direction: column;
-  background-color: #b3e5ab;
-  padding-bottom: 15%;
-  padding-top: 5%;
-  margin-top:2%;
-  
+  .blogPhotoDiv {
+    display: flex;
+    flex-direction: column;
+    background-color: #b3e5ab;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top: 2%;
+  }
+
+  #JillLindisfarne1993img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* pointer-events:none;  */
+    width: 70%;
+    height: auto;
+    border: solid grey 2px;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 50%;
+  }
+
+  .slideshowentryMay {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 70%;
+    height: auto;
+    border: solid grey 2px;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 50%;
+  }
+
+  .slideshowentry1May {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 70%;
+    height: auto;
+    border: solid grey 2px;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 50%;
+  }
 }
 
-#JillLindisfarne1993img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  /* pointer-events:none;  */
-  width:70%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-}
-
-.slideshowentryMay {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  pointer-events:none; 
-  width:70%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-}      
-
-
-.slideshowentry1May {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  pointer-events:none; 
-  width:70%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-  }   
-
-
-}
-
-@media screen and (max-width:480px) {
-
- /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+@media screen and (max-width: 480px) {
+  /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
  the site are displayed with the best dimensions for the smaller devices*/
 
+  .May2024header {
+    display: block;
+    text-align: center;
+    font-size: 1.75em;
+    color: white;
+    font-weight: bold;
+    /* border:solid 3px; */
+    width: 100vw;
+    /* height: 50vh; */
+    height: auto;
+    background: #e1eae7;
+    position: absolute;
+  }
 
-.May2024header {
-display:block;
-text-align: center;
-font-size: 1.75em;
-color:white;
-font-weight: bold;
-/* border:solid 3px; */
-width: 100vw;
-/* height: 50vh; */
-height:auto;
-background: #e1eae7;
-position:absolute; 
+  /*To ensure on mobile screens below 401px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+  .blogPhotoDiv {
+    display: flex;
+    flex-direction: column;
+    background-color: #b3e5ab;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top: 2%;
+  }
 
-} 
+  #JillLindisfarne1993img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* pointer-events:none;  */
+    width: 100%;
+    height: auto;
+    border: solid grey 2px;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 50%;
+  }
 
-/*To ensure on mobile screens below 401px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-.blogPhotoDiv{
-display:flex;
-flex-direction: column;
-background-color: #b3e5ab;
-padding-bottom: 15%;
-padding-top: 5%;
-margin-top:2%;
-}
+  .slideshowentryMay {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 80%;
+    height: auto;
+    border: solid grey 2px;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 50%;
+  }
 
-
-#JillLindisfarne1993img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  /* pointer-events:none;  */
-  width:100%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-}
-
-.slideshowentryMay {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  pointer-events:none; 
-  width:80%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-}      
-
-
-.slideshowentry1May {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  pointer-events:none; 
-  width:80%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-  }   
-
+  .slideshowentry1May {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 80%;
+    height: auto;
+    border: solid grey 2px;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 50%;
+  }
 }
