--- a/src/components/fallingleaves.css
+++ b/src/components/fallingleaves.css
@@ -1,4 +1,3 @@
-
 /* h1October{
     display:block;
     text-align: center;
@@ -7,248 +6,384 @@
     background-color:#92A8D1;
 } */
 
-.MonthTitle{
-    text-align:center;
-    color:#005600;
-    padding-bottom:10%;
+.MonthTitle {
+  text-align: center;
+  color: #005600;
+  padding-bottom: 10%;
 }
 
-.autumnal{
-  background:linear-gradient(180deg,#f7ca46 30%,#d54700, #5b7248 63%);
-  transform:rotate('360deg');
-  -webkit-transform:rotate('360deg');
-  -moz-transform:rotate('360deg');
-  -ms-transform:rotate('360deg');
-  -o-transform:rotate('360deg');
+.autumnal {
+  background: linear-gradient(180deg, #f7ca46 30%, #d54700, #5b7248 63%);
+  transform: rotate("360deg");
+  -webkit-transform: rotate("360deg");
+  -moz-transform: rotate("360deg");
+  -ms-transform: rotate("360deg");
+  -o-transform: rotate("360deg");
   animation-timing-function: 10s infinite;
-  height:100%;
+  height: 100%;
   border: solid grey 3px;
 }
 
-.Treesheddingleaves{
- display:block;
- position:relative;
- margin:0%;
- padding:0%;
- transform:scale(0.44);
- -webkit-transform:scale(0.44);
- -moz-transform:scale(0.44);
- -ms-transform:scale(0.44);
- -o-transform:scale(0.44);
+.Treesheddingleaves {
+  display: block;
+  position: relative;
+  margin: 0%;
+  padding: 0%;
+  transform: scale(0.44);
+  -webkit-transform: scale(0.44);
+  -moz-transform: scale(0.44);
+  -ms-transform: scale(0.44);
+  -o-transform: scale(0.44);
 }
 
 /* leaf animations */
 
-#leaves {position:relative;top:250px;width:60%;text-align: right; margin-left:30%;}
-
-#leaves i {
-    display: inline-block;
-    width: 200px;
-    height: 150px;
-    background: linear-gradient(to bottom right, #309900, #005600);
-    transform: skew(20deg);
-    border-radius: 5% 40% 70%;
-    box-shadow: inset 0px 0px 1px #222;
-    border: 1px solid #333;
-    z-index: 1;
-    animation: falling 5s 0s infinite;
-    margin:4%;
-    -webkit-animation: falling 5s 0s infinite;
+#leaves {
+  position: relative;
+  top: 250px;
+  width: 60%;
+  text-align: right;
+  margin-left: 30%;
 }
 
-#leaves i:nth-of-type(2n) { animation:falling2 5s 0s infinite;}
-#leaves i:nth-of-type(3n) { animation: falling3 5s 0s infinite; }
+#leaves i {
+  display: inline-block;
+  width: 200px;
+  height: 150px;
+  background: linear-gradient(to bottom right, #309900, #005600);
+  transform: skew(20deg);
+  border-radius: 5% 40% 70%;
+  box-shadow: inset 0px 0px 1px #222;
+  border: 1px solid #333;
+  z-index: 1;
+  animation: falling 5s 0s infinite;
+  margin: 4%;
+  -webkit-animation: falling 5s 0s infinite;
+}
+
+#leaves i:nth-of-type(2n) {
+  animation: falling2 5s 0s infinite;
+}
+#leaves i:nth-of-type(3n) {
+  animation: falling3 5s 0s infinite;
+}
 
 #leaves i:before {
   position: absolute;
-  content: '';
+  content: "";
   top: 117px;
   right: 9px;
   height: 7px;
   width: 32px;
   transform: rotate(49deg);
-  border-radius: 0% 15% 15% 0%;  border-top: 1px solid #222;
+  border-radius: 0% 15% 15% 0%;
+  border-top: 1px solid #222;
   border-bottom: 1px solid #222;
   border-left: 0px solid #222;
   border-right: 1px solid #222;
-  background: linear-gradient(to right, rgba(0,100,0,1), #005600);
+  background: linear-gradient(to right, rgba(0, 100, 0, 1), #005600);
   z-index: 1;
 }
 
-#leaves i:nth-of-type(n)   { animation-delay: 1.9s; -webkit-animation-delay: 1.9s;}
-#leaves i:nth-of-type(2n)  { animation-delay: 3.9s;-webkit-animation-delay: 3.9s;}
-#leaves i:nth-of-type(3n)  {animation-delay: 2.3s; -webkit-animation-delay: 2.3s;}
-#leaves i:nth-of-type(4n)  {animation-delay: 4.4s; -webkit-animation-delay: 4.4s;}
-#leaves i:nth-of-type(5n)  {animation-delay: 5.0s; -webkit-animation-delay: 5s;  }
-#leaves i:nth-of-type(6n)  {animation-delay: 3.5s; -webkit-animation-delay: 3.5s;}
-#leaves i:nth-of-type(7n)  {animation-delay: 2.8s; -webkit-animation-delay: 2.8s;}
-#leaves i:nth-of-type(8n)  { animation-delay: 1.5s;-webkit-animation-delay: 1.5s;}
-#leaves i:nth-of-type(9n)  { animation-delay: 3.3s;-webkit-animation-delay: 3.3s;}
-#leaves i:nth-of-type(10n) { animation-delay: 2.5s;-webkit-animation-delay: 2.5s;}
-#leaves i:nth-of-type(11n) { animation-delay: 1.2s;-webkit-animation-delay: 1.2s;}
-#leaves i:nth-of-type(12n) { animation-delay: 4.1s;-webkit-animation-delay: 4.1s;}
-#leaves i:nth-of-type(13n) { animation-delay: 1s;-webkit-animation-delay: 1s;  }
-#leaves i:nth-of-type(14n) {animation-delay: 4.7s; -webkit-animation-delay: 4.7s;}
-#leaves i:nth-of-type(15n) { animation-delay: 3s;-webkit-animation-delay: 3s;  }
-
+#leaves i:nth-of-type(n) {
+  animation-delay: 1.9s;
+  -webkit-animation-delay: 1.9s;
+}
+#leaves i:nth-of-type(2n) {
+  animation-delay: 3.9s;
+  -webkit-animation-delay: 3.9s;
+}
+#leaves i:nth-of-type(3n) {
+  animation-delay: 2.3s;
+  -webkit-animation-delay: 2.3s;
+}
+#leaves i:nth-of-type(4n) {
+  animation-delay: 4.4s;
+  -webkit-animation-delay: 4.4s;
+}
+#leaves i:nth-of-type(5n) {
+  animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+#leaves i:nth-of-type(6n) {
+  animation-delay: 3.5s;
+  -webkit-animation-delay: 3.5s;
+}
+#leaves i:nth-of-type(7n) {
+  animation-delay: 2.8s;
+  -webkit-animation-delay: 2.8s;
+}
+#leaves i:nth-of-type(8n) {
+  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+}
+#leaves i:nth-of-type(9n) {
+  animation-delay: 3.3s;
+  -webkit-animation-delay: 3.3s;
+}
+#leaves i:nth-of-type(10n) {
+  animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+#leaves i:nth-of-type(11n) {
+  animation-delay: 1.2s;
+  -webkit-animation-delay: 1.2s;
+}
+#leaves i:nth-of-type(12n) {
+  animation-delay: 4.1s;
+  -webkit-animation-delay: 4.1s;
+}
+#leaves i:nth-of-type(13n) {
+  animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+}
+#leaves i:nth-of-type(14n) {
+  animation-delay: 4.7s;
+  -webkit-animation-delay: 4.7s;
+}
+#leaves i:nth-of-type(15n) {
+  animation-delay: 3s;
+  -webkit-animation-delay: 3s;
+}
 
 #leaves i:after {
-  content: '';
+  content: "";
   height: 125px;
   width: 10px;
-  background: linear-gradient(to right, rgba(0,0,0,.15), rgba(0,0,0,0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
   display: block;
   transform: rotate(125deg);
   position: absolute;
   left: 85px;
-  border-radius:50%;
+  border-radius: 50%;
 }
 
+#leaves i:nth-of-type(n) {
+  height: 23px;
+  width: 30px;
+}
+#leaves i:nth-of-type(n):before {
+  width: 7px;
+  height: 5px;
+  top: 17px;
+  right: 1px;
+}
+#leaves i:nth-of-type(n):after {
+  width: 2px;
+  height: 17px;
+  left: 12px;
+  top: 0px;
+}
 
-#leaves i:nth-of-type(n)    { height:23px; width:30px; }
-#leaves i:nth-of-type(n):before { width:7px; height:5px; top:17px; right:1px; }
-#leaves i:nth-of-type(n):after { width:2px; height:17px; left: 12px; top:0px; }
+#leaves i:nth-of-type(2n + 1) {
+  height: 11px;
+  width: 16px;
+}
+#leaves i:nth-of-type(2n + 1):before {
+  width: 4px;
+  height: 3px;
+  top: 7px;
+  right: 0px;
+}
+#leaves i:nth-of-type(2n + 1):after {
+  width: 2px;
+  height: 6px;
+  left: 5px;
+  top: 1px;
+}
 
-#leaves i:nth-of-type(2n+1)    { height:11px; width:16px; }
-#leaves i:nth-of-type(2n+1):before { width:4px; height:3px; top:7px; right:0px; }
-#leaves i:nth-of-type(2n+1):after { width:2px; height:6px; left: 5px; top:1px; }
+#leaves i:nth-of-type(3n + 2) {
+  height: 17px;
+  width: 23px;
+}
+#leaves i:nth-of-type(3n + 2):before {
+  height: 4px;
+  width: 4px;
+  top: 12px;
+  right: 1px;
+}
+#leaves i:nth-of-type(3n + 2):after {
+  height: 10px;
+  width: 2px;
+  top: 1px;
+  left: 8px;
+}
 
-#leaves i:nth-of-type(3n+2)  { height:17px; width:23px; }
-#leaves i:nth-of-type(3n+2):before  { height:4px; width:4px; top:12px; right:1px; }
-#leaves i:nth-of-type(3n+2):after  { height:10px; width:2px; top:1px; left:8px; }
+#leaves i:nth-of-type(n) {
+  animation-delay: -0.2s;
+}
+#leaves i:nth-of-type(2n) {
+  animation-delay: 3.9s;
+  -webkit-animation-delay: 3.9s;
+}
+#leaves i:nth-of-type(3n) {
+  animation-delay: 2.3s;
+  -webkit-animation-delay: 2.3s;
+}
+#leaves i:nth-of-type(4n) {
+  animation-delay: 4.4s;
+  -webkit-animation-delay: 4.4s;
+}
+#leaves i:nth-of-type(5n) {
+  animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+#leaves i:nth-of-type(6n) {
+  animation-delay: 3.5s;
+  -webkit-animation-delay: 3.5s;
+}
+#leaves i:nth-of-type(7n) {
+  animation-delay: 2.8s;
+  -webkit-animation-delay: 2.8s;
+}
+#leaves i:nth-of-type(8n) {
+  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+}
+#leaves i:nth-of-type(9n) {
+  animation-delay: 3.3s;
+  -webkit-animation-delay: 3.3s;
+}
+#leaves i:nth-of-type(10n) {
+  animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+#leaves i:nth-of-type(11n) {
+  animation-delay: 1.2s;
+  -webkit-animation-delay: 1.2s;
+}
+#leaves i:nth-of-type(12n) {
+  animation-delay: 4.1s;
+  -webkit-animation-delay: 4.1s;
+}
+#leaves i:nth-of-type(13n) {
+  animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+}
+#leaves i:nth-of-type(14n) {
+  animation-delay: 4.7s;
+  -webkit-animation-delay: 4.7s;
+}
+#leaves i:nth-of-type(15n) {
+  animation-delay: 3s;
+  -webkit-animation-delay: 3s;
+}
 
+#leaves i:nth-of-type(n) {
+  background: linear-gradient(to bottom right, #7b1d00, #d54700);
+}
+#leaves i:nth-of-type(2n + 2) {
+  background: linear-gradient(to bottom right, #d54700, #542501);
+}
+#leaves i:nth-of-type(4n + 1) {
+  background: linear-gradient(to bottom right, #990, #564500);
+}
 
-#leaves i:nth-of-type(n)   { animation-delay: -0.2s;}
-#leaves i:nth-of-type(2n)  { animation-delay: 3.9s;-webkit-animation-delay: 3.9s;}
-#leaves i:nth-of-type(3n)  {animation-delay: 2.3s; -webkit-animation-delay: 2.3s;}
-#leaves i:nth-of-type(4n)  {animation-delay: 4.4s; -webkit-animation-delay: 4.4s;}
-#leaves i:nth-of-type(5n)  {animation-delay: 5.0s; -webkit-animation-delay: 5s;  }
-#leaves i:nth-of-type(6n)  {animation-delay: 3.5s; -webkit-animation-delay: 3.5s;}
-#leaves i:nth-of-type(7n)  {animation-delay: 2.8s; -webkit-animation-delay: 2.8s;}
-#leaves i:nth-of-type(8n)  { animation-delay: 1.5s;-webkit-animation-delay: 1.5s;}
-#leaves i:nth-of-type(9n)  { animation-delay: 3.3s;-webkit-animation-delay: 3.3s;}
-#leaves i:nth-of-type(10n) { animation-delay: 2.5s;-webkit-animation-delay: 2.5s;}
-#leaves i:nth-of-type(11n) { animation-delay: 1.2s;-webkit-animation-delay: 1.2s;}
-#leaves i:nth-of-type(12n) { animation-delay: 4.1s;-webkit-animation-delay: 4.1s;}
-#leaves i:nth-of-type(13n) { animation-delay: 1s;-webkit-animation-delay: 1s;  }
-#leaves i:nth-of-type(14n) {animation-delay: 4.7s; -webkit-animation-delay: 4.7s;}
-#leaves i:nth-of-type(15n) { animation-delay: 3s;-webkit-animation-delay: 3s;  }
+#leaves i:nth-of-type(n) {
+  opacity: 0.7;
+}
+#leaves i:nth-of-type(3n + 1) {
+  opacity: 0.5;
+}
+#leaves i:nth-of-type(3n + 2) {
+  opacity: 0.3;
+}
 
-#leaves i:nth-of-type(n)    { background: linear-gradient(to bottom right, #7b1d00, #d54700); }
-#leaves i:nth-of-type(2n+2)  { background: linear-gradient(to bottom right, #d54700, #542501); }
-#leaves i:nth-of-type(4n+1)  { background: linear-gradient(to bottom right, #990, #564500); }
+#leaves i:nth-of-type(n) {
+  transform: rotate(180deg);
+}
 
-#leaves i:nth-of-type(n)    { opacity: .7;}
-#leaves i:nth-of-type(3n+1)  { opacity: .5;}
-#leaves i:nth-of-type(3n+2)  { opacity: .3;}
-
-#leaves i:nth-of-type(n)    {transform: rotate(180deg);}
-
-
-#leaves i:nth-of-type(n) { animation-timing-function:ease-in-out;}
+#leaves i:nth-of-type(n) {
+  animation-timing-function: ease-in-out;
+}
 
 @keyframes falling {
-    
-    0% {
-        -webkit-transform:
-            translate3d(300,0,0)
-            rotate(0deg);
-    }
-    
-    100% {
-        -webkit-transform:
-            translate3d(-350px,700px,0)
-            rotate(90deg);
-        opacity: 0;
-    }
+  0% {
+    -webkit-transform: translate3d(300, 0, 0) rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: translate3d(-350px, 700px, 0) rotate(90deg);
+    opacity: 0;
+  }
 }
 
 @keyframes falling3 {
-     0% {
-        -webkit-transform:
-            translate3d(0,0,0)
-            rotate(-20deg);
-    }
-    
-    100% {
-        -webkit-transform:
-            translate3d(-230px,640px,0)
-            rotate(-70deg);
-        opacity: 0;
-    }
+  0% {
+    -webkit-transform: translate3d(0, 0, 0) rotate(-20deg);
+  }
+
+  100% {
+    -webkit-transform: translate3d(-230px, 640px, 0) rotate(-70deg);
+    opacity: 0;
+  }
 }
 
 @keyframes falling2 {
-     0% {
-        -webkit-transform:
-            translate3d(0,0,0)
-            rotate(90deg);
-    }
-    
-    100% {
-        -webkit-transform:
-            translate3d(-400px,680px,0)
-            rotate(0deg);
-        opacity: 0;
-    }
+  0% {
+    -webkit-transform: translate3d(0, 0, 0) rotate(90deg);
+  }
+
+  100% {
+    -webkit-transform: translate3d(-400px, 680px, 0) rotate(0deg);
+    opacity: 0;
+  }
 }
 
 /*To ensure on ipad screens and larger mobiles that the trees and falling leaves display is appropriately sized and placed*/
-@media screen and (min-width:402px) and (max-width:900px){
-    .Treesheddingleaves{
-        transform:translate(-40%, -8%) scale(0.4)   ;
-        -webkit-transform:translate(-40%, -8%) scale(0.4)   ;
-        -moz-transform:translate(-40%, -8%) scale(0.4)   ;
-        -ms-transform:translate(-40%, -8%) scale(0.4)   ;
-        -o-transform:translate(-40%, -8%) scale(0.4)   ;
-}
+@media screen and (min-width: 402px) and (max-width: 900px) {
+  .Treesheddingleaves {
+    transform: translate(-40%, -8%) scale(0.4);
+    -webkit-transform: translate(-40%, -8%) scale(0.4);
+    -moz-transform: translate(-40%, -8%) scale(0.4);
+    -ms-transform: translate(-40%, -8%) scale(0.4);
+    -o-transform: translate(-40%, -8%) scale(0.4);
+  }
 
-.autumnal{
-    background:linear-gradient(180deg,#f7ca46 30%,#d54700, #5b7248 48%);
-    transform:rotate('360deg');
-    -webkit-transform:rotate('360deg');
-    -moz-transform:rotate('360deg');
-    -ms-transform:rotate('360deg');
-    -o-transform:rotate('360deg');
+  .autumnal {
+    background: linear-gradient(180deg, #f7ca46 30%, #d54700, #5b7248 48%);
+    transform: rotate("360deg");
+    -webkit-transform: rotate("360deg");
+    -moz-transform: rotate("360deg");
+    -ms-transform: rotate("360deg");
+    -o-transform: rotate("360deg");
     animation-timing-function: 10s infinite;
-    height:100%;
+    height: 100%;
     border: solid grey 3px;
   }
-  
 }
 
-@media screen and (max-width:480px) {
-    .Treesheddingleaves{
-        transform:translate(-60%, -10%) scale(0.3)   ;
-        -webkit-transform:translate(-60%, -10%) scale(0.3)   ;
-        -moz-transform:translate(-60%, -10%) scale(0.3)   ;
-        -ms-transform:translate(-60%, -10%) scale(0.3)   ;
-        -o-transform:translate(-60%, -10%) scale(0.3)   ;
-}
+@media screen and (max-width: 480px) {
+  .Treesheddingleaves {
+    transform: translate(-60%, -10%) scale(0.3);
+    -webkit-transform: translate(-60%, -10%) scale(0.3);
+    -moz-transform: translate(-60%, -10%) scale(0.3);
+    -ms-transform: translate(-60%, -10%) scale(0.3);
+    -o-transform: translate(-60%, -10%) scale(0.3);
+  }
 
-#leaves {
-    transform:scale(0.7);
-    position:relative;
-    top:200px;
-    width:100%;
+  #leaves {
+    transform: scale(0.7);
+    position: relative;
+    top: 200px;
+    width: 100%;
     text-align: right;
-    margin-left:20%;
-    -webkit-transform:scale(0.7);
-    -moz-transform:scale(0.7);
-    -ms-transform:scale(0.7);
-    -o-transform:scale(0.7);
-}
-
-.autumnal{
-    background:linear-gradient(180deg,#f7ca46 30%,#d54700, #5b7248 50%);
-    transform:rotate('360deg');
-    -webkit-transform:rotate('360deg');
-    -moz-transform:rotate('360deg');
-    -ms-transform:rotate('360deg');
-    -o-transform:rotate('360deg');
-    animation-timing-function: 10s infinite;
-    height:100%;
-    border: solid grey 3px;
+    margin-left: 20%;
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
   }
 
+  .autumnal {
+    background: linear-gradient(180deg, #f7ca46 30%, #d54700, #5b7248 50%);
+    transform: rotate("360deg");
+    -webkit-transform: rotate("360deg");
+    -moz-transform: rotate("360deg");
+    -ms-transform: rotate("360deg");
+    -o-transform: rotate("360deg");
+    animation-timing-function: 10s infinite;
+    height: 100%;
+    border: solid grey 3px;
+  }
 }
