--- a/styles/January2025.css
+++ b/styles/January2025.css
@@ -1,6 +1,5 @@
 .January2025Header {
-  /* background-color: #a4a4aC; */
-  background: linear-gradient(180deg, rgb(36, 60, 62) 45%, #F2F3F5 55%, snow);
+  background: linear-gradient(180deg, rgb(36, 60, 62) 45%, #f2f3f5 55%, snow);
   height: 70vh;
   border: solid black 2px;
   position: relative;
@@ -24,7 +23,7 @@
 .newsJanuary {
   color: white;
   border: solid 2px whitesmoke;
-  background-color: #a4a4aC;
+  background-color: #a4a4ac;
   text-align: left;
   padding: 50px 20px 5px 20px;
   margin-top: 0%;
@@ -38,7 +37,7 @@
 .dateJanuary {
   color: white;
   border: solid 2px whitesmoke;
-  background-color: #a4a4aC;
+  background-color: #a4a4ac;
   text-align: center;
   padding: 10px 10px 10px 10px;
   margin-top: 3%;
@@ -52,7 +51,7 @@
 .newsheaderJanuary {
   color: white;
   border: solid 2px whitesmoke;
-  background-color: #a4a4aC;
+  background-color: #a4a4ac;
   text-align: center;
   padding: 10px 20px 10px 20px;
   margin-top: 0.3%;
@@ -91,21 +90,17 @@
   pointer-events: none;
   height: auto;
   width: 25%;
-  border: solid #1f3613 3px;
-  border-radius: 100%;
+  border: solid whitesmoke 3px;
   margin-top: 1%;
   margin-bottom: 1%;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  -ms-border-radius: 100%;
-  -o-border-radius: 100%;
+  border-radius: 100%;
 }
 
 .SlideshowHostPhotoJanuary {
   display: flex;
   flex-direction: column;
   border: solid 2px whitesmoke;
-  background-color: #a4a4aC;
+  background-color: #a4a4ac;
   padding-bottom: 2%;
   padding-top: 2%;
   justify-content: center;
@@ -132,10 +127,6 @@
   height: auto;
   border: solid whitesmoke 4px;
   border-radius: 20%;
-  -webkit-border-radius: 20%;
-  -moz-border-radius: 20%;
-  -ms-border-radius: 20%;
-  -o-border-radius: 20%;
 }
 
 .Januaryfigcaption {
@@ -156,72 +147,39 @@
 }
 @media screen and (min-width: 481px) and (max-width: 900px) {
   .slideshowentryJanuary {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    pointer-events: none;
-    height: auto;
-    width: 40%;
-    border: solid #1f3613 3px;
-    border-radius: 100%;
+    border: solid whitesmoke 3px;
     margin-top: 3%;
     margin-bottom: 5%;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
   }
 }
 @media screen and (max-width: 480px) {
   /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
-  the site are displayed with the best dimensions for the smaller devices*/
-  .January2024header {
-    display: block;
-    text-align: center;
+    the site are displayed with the best dimensions for the smaller devices*/
+  .January2025header {
     font-size: 1.75em;
-    font-weight: bold;
     width: 100vw;
     height: 50vh;
-    position: relative;
-    background-color: #165B33;
+    background-color: #165b33;
     overflow-x: hidden;
   }
   .newsJanuary {
-    color: white;
-    border: solid 2px whitesmoke;
-    background-color: #a4a4aC;
-    text-align: left;
     padding: 20px 10% 20px 10%;
     margin-top: 0%;
     margin-bottom: 10%;
     font-size: 1rem;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    font-weight: bold;
-    width: 100%;
   }
   .blogPhotoDivJanuary {
-    display: flex;
     flex-direction: column;
-    background-color: #a4a4aC;
     padding-bottom: 5%;
     padding-top: 5%;
     margin-top: 2%;
   }
   .slideshowentryJanuary {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    pointer-events: none;
     width: 65%;
-    height: auto;
-    border: solid #1f3613 3px;
-    border-radius: 100%;
+    border: solid whitesmoke 3px;
     margin-top: 3%;
     margin-bottom: 5%;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
   }
   .slideshowinstructionsJanuary {
     margin-top: 1%;
@@ -229,8 +187,5 @@
     padding-right: 10%;
     padding-left: 10%;
     font-size: 1.1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    display: block;
-    color: white;
   }
 }/*# sourceMappingURL=January2025.css.map */
